--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
     outline: none;
     user-select: none;
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-    font-family: 'Dosis', sans-serif;
+    /* font-family: 'Dosis', sans-serif; */
+    font-family: 'Roboto', sans-serif;
 }
 body{
     background-color: black;
@@ -31,7 +32,7 @@ header{
 header img{
     filter: invert(100%);
     padding: .5rem .3rem;
-    height: 3.5rem;
+    height: 3.3rem;
 }
 nav{
     display:flex;
@@ -39,12 +40,12 @@ nav{
 }
 nav i{
     padding: .3rem 1rem;
-    font-size: 2rem !important;
+    font-size: 1.8rem !important;
     font-weight: 900;
 }
 nav img{
     padding: .3rem .7rem;
-    height: 2.4rem;
+    height: 2.2rem;
 }
 
 /* article section goes here  */
@@ -74,8 +75,8 @@ section::-webkit-scrollbar{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 6rem;
-    height: 8rem;
+    width: 5.5rem;
+    height: 7.5rem;
     margin-left: 1rem;
 }
 .image-container{
@@ -84,8 +85,8 @@ section::-webkit-scrollbar{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 6rem;
-    height:6rem;
+    width: 5.5rem;
+    height:5.5rem;
 }
 .image-container img{
     border-radius: 50%;
@@ -95,8 +96,7 @@ section::-webkit-scrollbar{
     background-color: black;
 }
 .user-name{
-    font-size: .8rem;
-    font-weight: 600;
+    font-size: .65rem;
     margin: 0.3rem 0;
 }
 
@@ -235,7 +235,7 @@ section::-webkit-scrollbar{
     width: 5rem;
 }
 #heading{
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 #paragraph , #caughtUp a{
     margin: .8rem 0;
@@ -251,12 +251,12 @@ section::-webkit-scrollbar{
 footer{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    padding: 1rem;
+    padding: 0.5rem 1rem;
     background-color: black;
 }
 footer img{
