--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ section::-webkit-scrollbar{
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    font-size: .9rem;
+    font-size: .7rem;
     font-weight: 600;
 }
 .post-name div:first-child{
@@ -157,20 +157,20 @@ section::-webkit-scrollbar{
 .post-liked{
     margin: 0 1rem;
     font-weight: 600;
-    font-size: .9rem;
+    font-size: .7rem;
     padding: .25rem 0 0;
 }
 
 /* post comments  */
 .post-comment{
-    font-size: .9rem;
+    font-size: .7rem;
     margin: 0 1rem;
     padding: .25rem 0  0;
 }
 
 /* post views  */
 .post-view-comment{
-    font-size: .9rem;
+    font-size: .7rem;
     margin: 0 1rem;
     color: rgba(255, 255, 255, 0.5);
     padding: .25rem 0;
@@ -191,7 +191,7 @@ section::-webkit-scrollbar{
     border: none;
     color: white;
     background-color: black;
-    font-size: 1rem;
+    font-size: .9rem;
     width: 80%;
     padding: .3rem;
 }
@@ -216,8 +216,7 @@ section::-webkit-scrollbar{
 
 /* post time   */
 .post-time{
-    font-size: 0.7rem;
-    font-weight: 600;
+    font-size: 0.5rem;
     margin: 0.3rem 1rem .5rem;
     color: rgba(255, 255, 255, 0.404);
 }
@@ -225,21 +224,21 @@ section::-webkit-scrollbar{
 /* caught up section goes here   */
 #caughtUp{
     border: 1px solid rgba(255, 255, 255, 0.1);
-    padding: 4.5rem 0;
+    padding: 4rem 0 5rem;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 #tick img{
-    width: 5rem;
+    width: 5.5rem;
 }
 #heading{
     font-size: 1.5rem;
 }
 #paragraph , #caughtUp a{
-    margin: .8rem 0;
-    font-size: 0.8rem;
+    margin: .7rem 0;
+    font-size: 0.7rem;
 }
 #caughtUp a{
     font-weight: 600;
