--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
     outline: none;
     user-select: none;
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-    /* font-family: 'Dosis', sans-serif; */
     font-family: 'Roboto', sans-serif;
 }
 body{
@@ -44,8 +43,8 @@ nav i{
     font-weight: 900;
 }
 nav img{
-    padding: .3rem .7rem;
-    height: 2.2rem;
+    padding: 0 1rem 0 .5rem;
+    height: 2rem;
 }
 
 /* article section goes here  */
@@ -85,8 +84,8 @@ section::-webkit-scrollbar{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 5.5rem;
-    height:5.5rem;
+    width: 5rem;
+    height:5rem;
 }
 .image-container img{
     border-radius: 50%;
@@ -259,7 +258,7 @@ footer{
     background-color: black;
 }
 footer img{
-    width: 1.7rem;
+    width: 1.5rem;
     filter: invert(100%);
 }
 footer img:last-child{
