--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ nav i{
 }
 nav img{
     padding: 0 1rem 0 .5rem;
-    height: 2rem;
+    height: 1.6rem;
 }
 
 /* article section goes here  */
@@ -76,7 +76,7 @@ section::-webkit-scrollbar{
     flex-direction: column;
     width: 5.5rem;
     height: 7.5rem;
-    margin-left: 1rem;
+    margin-left: .5rem;
 }
 .image-container{
     background: linear-gradient(210deg,rgb(255, 0, 128),#ff9900);
