--- a/style.css
+++ b/style.css
@@ -133,8 +133,38 @@ section::-webkit-scrollbar{
 }
 
 /* post full size image goes here  */
+.post-image{
+    position: relative;
+}
 .post-image img{
     width: 100%;
+}
+
+/* to show white heart on double click  */
+.white-heart{
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    animation: WhiteHeart .3s ease-in-out;
+    font-size: 5rem;
+    text-shadow:  0px 0px 5px black;
+    opacity: 0.7;
+    display: none;
+}
+
+/* animation for popping .white-heart  */
+@keyframes WhiteHeart{
+    0%{
+        transform: scale(0);
+    }
+    80%{
+        transform: scale(1);
+    }
+    100%{
+        transform: scale(.8);
+    }
 }
 
 /* post icon images  */
