--- a/style.css
+++ b/style.css
@@ -198,13 +198,14 @@ section::-webkit-scrollbar{
 }
 /* images goes here  */
 .collection img{
-    width: 1.8rem;
-    height: 1.8rem;
+    width: 2rem;
+    height: 2rem;
 }
 
 /* class collection's last child  */
 .collection >div:last-child{
     color:  rgb(57, 136, 255);
+    padding-right: 3px;
 }
 
 /* collection animation goes here  */
