--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ section::-webkit-scrollbar{
     animation: StoryReveal 0.4s ease;
 }
 #story-head{
-    padding: .5rem 0;
+    /* padding: .5rem 0; */
     display: block;
     position: absolute;
     top: 0;
@@ -129,12 +129,13 @@ section::-webkit-scrollbar{
 }
 #backButton{
     text-shadow: 0px 0px 2px black;
-    padding: 0.5rem;
-    color:white;
+    padding: 0 0.4rem;
+    font-size: 1.3rem;
+    color:rgb(255, 255, 255);
     z-index: 250;
 }
 #scale{
-    margin: 0 .2rem;
+    margin: 0 .3rem;
     width: 100%;
     box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.164);
     background-color: rgba(255, 255, 255,.3);
@@ -152,17 +153,30 @@ section::-webkit-scrollbar{
 }
 #story-details > div:first-child{
     display: flex;
+    align-items: center;
 }
 #story-details > div:first-child > div{
-    padding: 0 0.5rem;
+    padding-left:0.5rem;
     line-height: normal;
 }
-#story-details img{
-    width: 1.5rem;
+#story-image{
+    width: 2rem;
     border-radius: 50%;
+    margin-left: 0.3rem;
+}
+#story-name,#story-time{
+    text-shadow:0px 0px 2px black;
+    font-size:0.6rem;
+    font-weight:600; 
+}
+#story-time{
+    color: rgba(255, 255, 255, 0.518);
 }
 #storyContainer video{
     width: 100%;
+}
+.fa-ellipsis-v{
+    padding-right: .5rem;
 }
 
 /* animation for story  */
