--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ section::-webkit-scrollbar{
 }
 #backButton{
     text-shadow: 0px 0px 2px black;
-    padding: 0 0.4rem;
+    padding: 4px 0.4rem 0;
     font-size: 1.3rem;
     color:rgb(255, 255, 255);
     z-index: 250;
@@ -160,13 +160,13 @@ section::-webkit-scrollbar{
     line-height: normal;
 }
 #story-image{
-    width: 2.5rem;
+    width: 3rem;
     border-radius: 50%;
     margin-left: 0.3rem;
 }
 #story-name,#story-time{
     text-shadow:0px 0px 2px black;
-    font-size:0.75rem;
+    font-size:0.9rem;
     font-weight:600; 
 }
 #story-time{
@@ -440,3 +440,4 @@ footer img:last-child{
     filter: none;
     border-radius: 50%;
 }
+        
