--- a/style.css
+++ b/style.css
@@ -184,10 +184,12 @@ section::-webkit-scrollbar{
     0%{
         top:-100%;
         left: -100%;
+        opacity: 0;
     }
     100%{
         top: 0;
         left: 0;
+        opacity: 1;
     }
 }
 
