--- a/style.css
+++ b/style.css
@@ -222,6 +222,12 @@ section::-webkit-scrollbar{
     width: 1rem;
     margin-right:1rem;
 }
+.blue-tick{
+    width: 1rem !important;
+    padding-left: 3px;
+    filter: none !important;
+    border-radius: 50%;
+}
 
 /* post full size image goes here  */
 .post-image{
